# slackify-wrapped

./: .travis.yml  Cargo.toml  Dockerfile  LICENSE.md  README.md
.cargo/: config
.github/workflows/: build_and_test.yml
src/: main.rs  tests.rs
src/features/: emoji_contributor.rs  favourite_reaction.rs
src/slack/: bots.rs  client.rs  emoji.rs  mod.rs  reactions.rs  util.rs
