[package]
name = "slackify-wrapped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
gethostname = "0.2.1"
psutil = "3.0.1"
rocket_okapi = "0.3.6"
schemars = "0.6"
okapi = { version = "0.3", features = ["derive_json_schema"] }

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]